--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "survey-react": "^1.8.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
