--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/w3c-web-usb": "^1.0.4"
   }
 }
